@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Jul 2011; Michael Weber <xmw@gentoo.org> makeheaders-0_p4.ebuild:
+  fixed src_unpack
+
 *makeheaders-0_p4 (16 Jul 2011)
 
   16 Jul 2011; Michael Weber <xmw@gentoo.org> +makeheaders-0_p4.ebuild,
